Metrics 2: yield is done. summary.html is done

--- a/tracker/templates/tracker/summary.html
+++ b/tracker/templates/tracker/summary.html
@@ -276,7 +276,7 @@
                   <td>{{ iteration.defect_in_rate }}</td>
                   <td>{{ iteration.defect_out_rate }}</td>
                   <td>{{ iteration.defect_density }}</td>
-                  <td></td>
+                  <td>{{ iteration.defect_yield }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -307,7 +307,7 @@
                   <td>{{ phase.defect_in_rate }}</td>
                   <td>{{ phase.defect_out_rate }}</td>
                   <td>{{ phase.defect_density }}</td>
-                  <td></td>
+                  <td>{{ phase.defect_yield }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -336,7 +336,7 @@
                   <td>{{ pro.defect_in_rate }}</td>
                   <td>{{ pro.defect_out_rate }}</td>
                   <td>{{ pro.defect_density }}</td>
-                  <td></td>
+                  <td>{{ pro.defect_yield }}</td>
                   {% endfor %}
                 </tr>
                 
