--- a/tracker/templates/tracker/login.html
+++ b/tracker/templates/tracker/login.html
@@ -1,28 +1,29 @@
-<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<title>Log in</title>
-<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<style>
-body{
-    font-family:Arial,Helvetica,sans-serif;
-    font-size: 12px;
-}
-</style>
-</head>
-<body>
-    {{ state }}
-    <form action="/login/" method="post">
-        {% if next %}
-        <input type="hidden" name="next" value="{{ next }}" />
-        {% endif %}
-        username: 
-        <input type="text" name="username" value="{{ username}}" /><br />
-        password:
-        <input type="password" name="password" value="" /><br />
-
-        <input type="submit" value="Log In" />
-    </form>
-</body>
-</html>
--->
++<!DOCTYPE html>
++<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
++<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
++<!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
++<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
++<head>
++  <meta charset="utf-8">
++  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
++  <title>Login Form</title>
++  <link rel="stylesheet" href="css/style.css">
++  <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
++</head>
++<body>
++  <section class="container">
++    <div class="login">
++      <h1>Login to PDT</h1>
++      <form method="post" action="index.html">
++        <p><input type="text" name="login" value="" placeholder="Username"></p>
++        <p><input type="password" name="password" value="" placeholder="Password"></p>
++        <p class="remember_me">
++        </p>
++        <p class="submit"><input type="submit" name="commit" value="Login"></p>
++      </form>
++  </section>
++<br>
++
++  </section>
++</body>
++</html>
