--- a/tracker/templates/tracker/reportdefect.html
+++ b/tracker/templates/tracker/reportdefect.html
@@ -1,15 +1,168 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
     <title>Report A Defect </title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+
+      <!-- Custom styles for this template -->
+    {% load staticfiles %}
+    <!--<link rel="stylesheet" type="text/css" href="{% static 'tracker/dashboard.css' %}" />-->
+
+    <style>
+      /*
+       * Base structure
+       */
+      /* Move down content because we have a fixed navbar that is 50px tall */
+      body {
+        padding-top: 50px;
+      }
+
+      /*
+       * Global add-ons
+       */
+      .sub-header {
+        padding-bottom: 10px;
+        border-bottom: 1px solid #eee;
+      }
+
+      /*
+       * Top navigation
+       * Hide default border to remove 1px line.
+       */
+      .navbar-fixed-top {
+        border: 0;
+      }
+
+      /*
+       * Sidebar
+       */
+      /* Hide for mobile, show later */
+      .sidebar {
+        display: none;
+      }
+      @media (min-width: 768px) {
+        .sidebar {
+          position: fixed;
+          top: 51px;
+          bottom: 0;
+          left: 0;
+          z-index: 1000;
+          display: block;
+          padding: 20px;
+          overflow-x: hidden;
+          overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+          background-color: #f5f5f5;
+          border-right: 1px solid #eee;
+        }
+      }
+
+      /* Sidebar navigation */
+      .nav-sidebar {
+        margin-right: -21px; /* 20px padding + 1px border */
+        margin-bottom: 20px;
+        margin-left: -20px;
+      }
+      .nav-sidebar > li > a {
+        padding-right: 20px;
+        padding-left: 20px;
+      }
+      .nav-sidebar > .active > a,
+      .nav-sidebar > .active > a:hover,
+      .nav-sidebar > .active > a:focus {
+        color: #fff;
+        background-color: #428bca;
+      }
+
+
+      /*
+       * Main content
+       */
+      .main {
+        padding: 20px;
+      }
+      @media (min-width: 768px) {
+        .main {
+          padding-right: 40px;
+          padding-left: 40px;
+        }
+      }
+      .main .page-header {
+        margin-top: 0;
+      }
+
+
+      /*
+       * Placeholder dashboard ideas
+       */
+      .placeholders {
+        margin-bottom: 30px;
+        text-align: center;
+      }
+      .placeholders h4 {
+        margin-bottom: 0;
+      }
+      .placeholder {
+        margin-bottom: 20px;
+      }
+      .placeholder img {
+        display: inline-block;
+        border-radius: 50%;
+      }
+    </style>
    </head>
+
    <body>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          {% for pro in project %}
+          <a class="navbar-brand" href="#">{{ pro.name }}</a>
+          {% endfor %}
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            
+          {% for man in manager %}  
+          <li><a href="/tracker/{{ manager.uid }}/home">{{ man.name }}</a></li>
+          {% endfor %}
+            
+            <li><a href="#">Logout</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+      <center>
    		<h1>Report A Defect</h1>
-   		<form action="." method="POST">
-		    {% csrf_token %}
-		    {{ form.as_p }}
-	    <input type="submit" />
-		</form>
+      
+       		<form action="." method="POST">
+    		    {% csrf_token %}
+    		    {{ form.as_p }} 
+
+    	    <input type="submit" value="Summit" />
+    		  </form>
+      </center>
 
    </body>
 </html>
